--- a/003.DataPassing.md
+++ b/003.DataPassing.md
@@ -259,3 +259,139 @@ If data is simple and only between parent-child → use @Input / @Output
 If it's local component state → use **signals**
 
 
+Ah, now we’re talking about **communication between unrelated components** (no parent-child relationship) in Angular 18+ with **signals**. Let’s clarify carefully.
+
+---
+
+# ✅ **1. Old Way (Pre-Signals)**
+
+Before Angular 16/17, for unrelated components, you needed a **shared service** + **RxJS BehaviorSubject / Subject**:
+
+```ts
+@Injectable({ providedIn: 'root' })
+export class SharedService {
+  private messageSource = new BehaviorSubject<string>('default');
+  currentMessage = this.messageSource.asObservable();
+
+  changeMessage(msg: string) {
+    this.messageSource.next(msg);
+  }
+}
+```
+
+* Component A calls `changeMessage("Hello")`
+* Component B subscribes to `currentMessage`
+* Updates automatically → reactive communication
+
+---
+
+# ✅ **2. Modern Angular 18+ Approach with Signals**
+
+With **signals**, you **don’t need BehaviorSubject** anymore.
+Signals are **reactive primitives** that can live in a service, and any component can **read** or **update** them.
+
+---
+
+## **Shared Service with Signal**
+
+```ts
+import { Injectable, signal, WritableSignal } from '@angular/core';
+
+@Injectable({ providedIn: 'root' })
+export class SharedSignalService {
+  // WritableSignal holds the state
+  message: WritableSignal<string> = signal('Initial Value');
+}
+```
+
+---
+
+## **Component A (writes data)**
+
+```ts
+import { Component } from '@angular/core';
+import { SharedSignalService } from './shared-signal.service';
+
+@Component({
+  selector: 'app-component-a',
+  standalone: true,
+  template: `<button (click)="send()">Send</button>`
+})
+export class ComponentA {
+  constructor(private shared: SharedSignalService) {}
+
+  send() {
+    this.shared.message.set('Hello from Component A');
+  }
+}
+```
+
+---
+
+## **Component B (reads data)**
+
+```ts
+import { Component, effect } from '@angular/core';
+import { SharedSignalService } from './shared-signal.service';
+
+@Component({
+  selector: 'app-component-b',
+  standalone: true,
+  template: `<p>Message: {{ shared.message() }}</p>`
+})
+export class ComponentB {
+  constructor(public shared: SharedSignalService) {
+    // Optional: react to changes imperatively
+    effect(() => {
+      console.log('New message:', this.shared.message());
+    });
+  }
+}
+```
+
+---
+
+# 🔹 **Key Advantages of Using Signals Instead of BehaviorSubject**
+
+| Feature              | BehaviorSubject                              | Signals                                       |
+| -------------------- | -------------------------------------------- | --------------------------------------------- |
+| Setup complexity     | Needs RxJS imports + subscribe + unsubscribe | Simple: just a `signal()`                     |
+| Automatic cleanup    | Must unsubscribe                             | Signals auto-track dependencies               |
+| Read/Write API       | `.next()` and `.subscribe()`                 | `.set()` and `signal()`                       |
+| Reactive template    | Needs `async` pipe                           | Direct: `{{ signal() }}`                      |
+| Angular 18 optimized | Works fine                                   | Fully optimized with OnPush and zoneless mode |
+
+---
+
+# 🔹 **Do we still need BehaviorSubject?**
+
+* **No**, for most cases in Angular 18+, **signals replace BehaviorSubject** in shared services.
+* **Only use RxJS subjects** if:
+
+  * You need **complex RxJS operators** like `debounceTime`, `switchMap`, `combineLatest`
+  * You are integrating with existing RxJS code
+
+Otherwise, **signals are simpler, reactive, and fully Angular-native**.
+
+---
+
+# 🔹 **Summary**
+
+1. Unrelated components → use **shared service**.
+2. Old way: BehaviorSubject / Subject → subscribe / emit.
+3. Angular 18+ way: **WritableSignal in service**.
+4. Component reads `signal()` and writes `.set()`.
+5. No subscriptions, no `async` pipe needed.
+
+---
+
+If you want, I can make a **full working example** showing:
+
+* **Component A → Shared Signal → Component B**
+* And optionally **Parent → Child signals + Shared signals** in the same app
+
+This will show the **modern Angular 18 approach for all scenarios**.
+
+Do you want me to do that?
+
+
